# LLM-Optimization-Pipeline

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  create_project.sh  pyproject.toml  requirements.txt  setup.py  test_results_meta-llama_Llama-3.2-1B-Instruct_tiny_lambada.json
.github/workflows/: ci.yml
llm_optimizer/: __init__.py  base.py  benchmarking.py  cli.py  config.py  distillation.py  evaluation.py  evaluation_debug.py  fine_tuning.py  onnx_conversion.py  pipeline.py  prompt_optimization.py  pruning.py  quantization.py  run_benchmark_debug.py  test_completion.py
llm_optimizer/configs/: combined_optimization.yaml   default.yaml  distillation.yaml  llama_benchmark.yaml  onnx.yaml  prompt_optimization.yaml   pruning.yaml  quantization.yaml
llm_optimizer/data/: __init__.py
llm_optimizer/data/evaluation/: __init__.py  tiny_lambada.json  tiny_wikitext.txt
llm_optimizer/scripts/: benchmark_llama_gguf.py
llm_optimizer/utils/: data.py  diagnostics.py  gguf_utils.py  model.py  project.py
tests/: test_evaluation.py  test_pipeline.py
